0.12.0
======
- Extra polish on issue markdown (Thanks Oliver Bristow)
- Require at least boto3>=1.5.0 (Thanks Wahab Ali)
- Handle AWS_PROFILE env variable (Thanks Galen Huntington)

0.11.0
======
- Add finer-grained control over color output (Thanks Alex Pinkney)
- Make watch interval configurable (Thanks Logan Hendricks)
- Reuse aws-cli MFA sessions cache if present (Thanks Juhani Hietikko)
- Use lastIngestionTime instead of lastEventTimestamp in order to correctly filter streams (Thanks Daniel Hahler and Clément MATHIEU)

0.10.0
======
- Gracefully exit on SIGPIPE (Thanks rwolfson) #122 #93 #101

0.9.0
=====
- New default start time for "streams"

0.8.0
=====
- New: ``--log-group-prefix``, ``-p`` option to filter groups.
- Fix: Remove extra newline after each line.

0.7.0
=====
- Improve documentation (Thanks Pietro Di Bello)
- Make it possible to use timezoned timestamps as input for ``-start`` and ``-end`` (Thanks Samuel Cochran)
- New: ``--query`` will now accept a JMESPath query which will filter the response data (Thanks Samuel Cochran)

0.6.0
=====
- Add wheels support (Thanks Thomas Grainger)
- Improve core removing threading (Thanks Thomas Grainger)
- Fix output when several newlines are present at the end onf the log line #73 (Thanks Charlie Chrisman)

0.5.0
=====
- Start using tox (Thanks Jan Vlčinský)
- If streams are filtered, and none are found, awslogs will complain #52 (Thanks Nathan Leiby)
- Add shortcuts to --filter-pattern and --watch (Thanks spenthil)
- Add python 3.5 support #70 (Thanks adamchainz)
- Flush message output to stdout #67 (Thanks spenthil)

0.4.0
=====
* Fix utf-8 issues
* Add ``-S`` as shorthand for ``--no-stream`` and ``-G`` as shorthand for ``--no-group``. Thanks Adam Chainz

0.3.0
=====
* Add ``--timestamp`` and ``--ingestion-time`` Thanks vlcinsky #36
* Fix help texts. Thanks Daniel Hahler #46
* Add flake8 to travis

0.2.0
=====
* Add ``--filter-pattern`` option. #28