@@ -1,3 +1,8 @@
+Unrelease
+=========
+
+- Use the configured region when using ``--profile``.
+
 0.12.0
 ======
 - Extra polish on issue markdown (Thanks Oliver Bristow)
